2009-03-15  higepon  <higepon@users.sourceforge.jp>

        * ByteArrayBinaryOutputPort.cpp/h : Added for string->bytevector.

2009-03-14  higepon  <higepon@users.sourceforge.jp>

        * Implmented "eol-style" for textual-input-port.

        * Refactoring Transcoder things.

        * Makefile.am : disable-profiler works fine.

2009-03-13  higepon  <higepon@users.sourceforge.jp>

        * Now passes all of (rnrs io simple) tests.

        * PortProcedures.cpp (peek-char): Fixed wrong argument length.

        * library.scm (call-with-output-file): Fixed for mulitple values.

        * Implemented and tested custom-textual-input/output-port.

        * Implemented and tested custom-textual-output-port.

        * test/output-port.scm : Added tests for custom-textual-output-port.

        * test/input-port.scm: Added tests for custom-textual-input-port.

        * Implemented and tested custom-textual-input-port.

        * CustomTextualInputPort.cpp : Added not implemented.

        * CustomBinaryInputOutputPort.cpp : Added <custom-binary-input/output-port>.

        * ErrorProcedures.cpp : Fixed the bug of &i/o-encoding arguments error.

2009-03-12  higepon  <higepon@users.sourceforge.jp>

        * Fixed the bug: Loading serialized librararies causes overwriting current label binding value.
          See compat.ss and http://wiki.monaos.org/pukiwiki.php?Mosh%2FBugs%2Fserialize-library%2Fdebug

2009-03-12  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added put-char.

2009-03-11  higepon  <higepon@users.sourceforge.jp>

        * read.cpp (read_char): u_int32_t => uint32_t. (Thanks to antonio.vieiro).

2009-03-10  higepon  <higepon@users.sourceforge.jp>

        * <string-port> returns native-transcoder.

2009-03-09  higepon  <higepon@users.sourceforge.jp>

        * i/o-read and i/o-write can be raised.

        * open-xxx can raise i/o-file-is-read-only and i/o-file-protection.
