@@ -1,5 +1,7 @@
 2009-03-15  higepon  <higepon@users.sourceforge.jp>
 
+        * ByteArrayBinaryInputPort.cpp : Implmented readBytes, readSome and readAll.
+
         * ByteArrayBinaryOutputPort.cpp/h : Added for string->bytevector.
 
 2009-03-14  higepon  <higepon@users.sourceforge.jp>
